src/objects/MX_PyME_Detalle_productos__c.object
<CustomObject>
    <fields>
        <fullName>MX_PYME_Balance_Productos__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Producto relacionado con el detalle</description>
        <label>Balance Productos</label>
        <referenceTo>MX_PyME_Balance_Productos__c</referenceTo>
        <relationshipLabel>Detalles productos</relationshipLabel>
        <relationshipName>Detalles_productos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Amortizaciones__c</fullName>
        <label>Amortizaciones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Cliente_detprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Blance Servicios</relationshipLabel>
        <relationshipName>Blance_Servicios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Compras_Disposiciones__c</fullName>
        <label>Compras + Disposiciones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>    
    <fields>
        <fullName>MX_PyME_No_credito_bp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Número crédito bp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_No_credito_tarjeta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>No crédito/tarjeta</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MX_PyME_No_impagos__c</fullName>
        <label>Número de impagos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Porcentaje_uso__c</fullName>
        <label>Porcentaje de uso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Saldo_otorgado__c</fullName>
        <label>Saldo otorgado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Detalle productos</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Detalle Productos</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detalles productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>